# cuda-gnn-inference

./: INSTRUCTIONS.md  README.md  meson.build
Colab/: InitialSetup.ipynb  Runner.ipynb
doc/: environment.md  features.md  knowladge.md  project.md  requirements.md
src/: cuda_kernels.cu  cuda_kernels.h  main.cpp
src/common/: utils.cpp  utils.hpp
src/cuda/: cuda_kernels.cu  cuda_kernels.cuh  main_cuda.cu
src/parallel/: main_omp.cpp
src/sequential/: main_seq.cpp
